Add ownership example from TRPL book.

--- a/the_rust_programming_language/Cargo.toml
+++ b/the_rust_programming_language/Cargo.toml
@@ -10,3 +10,7 @@ rand = "0.7.0"
 [[bin]]
 name = "guessing_game"
 path = "src/chapter2/guessing_game.rs"
+
+[[bin]]
+name = "ownership"
+path = "src/chapter3/ownership.rs"
