Add enum and match pattern example from TRPL book.

--- a/the_rust_programming_language/Cargo.toml
+++ b/the_rust_programming_language/Cargo.toml
@@ -18,3 +18,7 @@ path = "src/chapter3/ownership.rs"
 [[bin]]
 name = "structs"
 path = "src/chapter5/structs.rs"
+
+[[bin]]
+name = "enum_match"
+path = "src/chapter6/enum_match.rs"
