--- a/the_rust_programming_language/Cargo.toml
+++ b/the_rust_programming_language/Cargo.toml
@@ -30,3 +30,7 @@ path = "src/chapter8/common_collections.rs"
 [[bin]]
 name = "errors"
 path = "src/chapter9/errors.rs"
+
+[[bin]]
+name = "propagate_error"
+path = "src/chapter9/propagate_error.rs"
