--- a/the_rust_programming_language/Cargo.toml
+++ b/the_rust_programming_language/Cargo.toml
@@ -42,3 +42,7 @@ path = "src/chapter10/duplicated_code.rs"
 [[bin]]
 name = "generics"
 path = "src/chapter10/generics.rs"
+
+[[bin]]
+name = "traits"
+path = "src/chapter10/traits.rs"
