--- a/the_rust_programming_language/Cargo.toml
+++ b/the_rust_programming_language/Cargo.toml
@@ -54,3 +54,12 @@ path = "src/chapter10/generic_trait_function.rs"
 [[bin]]
 name = "lifetimes"
 path = "src/chapter10/lifetimes.rs"
+
+[lib]
+name = "test_struct"
+path = "src/chapter11/test_struct.rs"
+
+[[bin]]
+name = "guessing_game_test"
+path = "src/chapter11/guessing_game_test.rs"
+
