Add functional example with closures.

--- a/the_rust_programming_language/Cargo.toml
+++ b/the_rust_programming_language/Cargo.toml
@@ -71,3 +71,6 @@ path = "src/chapter12/minigrep.rs"
 name = "minigrep"
 path = "src/chapter12/lib.rs"
 
+[[bin]]
+name = "functional"
+path = "src/chapter13/functional.rs"
