Move englishify to project_euler. Rename project to various_examples.

--- a/project_euler/Cargo.toml
+++ b/project_euler/Cargo.toml
@@ -20,3 +20,7 @@ path = "src/sieve.rs"
 [[bin]]
 name = "bigint"
 path = "src/bigint.rs"
+
+[[bin]]
+name = "englishify"
+path = "src/englishify.rs"
